# cargo-tarball

./: Cargo.toml
src/: main.rs
